argo_cd/k8-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: franchise-backend
  namespace: pixclick
spec:
  selector:
    tier: app
    name: franchise-backend
  ports:
    - name: franchise-backend
      port: 5003
      targetPort: 5003
  type: ClusterIP
