argo_cd/k8-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: franchise-backend
  namespace: pixclick
  annotations:
    alb.ingress.kubernetes.io/subnets: "SubnetPublicAPSOUTH1B,SubnetPublicAPSOUTH1A,SubnetPublicAPSOUTH1C"
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/load-balancer-name: "franchise-backend"
    alb.ingress.kubernetes.io/healthcheck-port: "5003"
    alb.ingress.kubernetes.io/healthcheck-path: "/api"
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '43'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '40'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '3'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '3'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-south-1:358308582535:certificate/d0707182-c503-403d-b2bb-07d382fb78dd"
spec:
  rules:
  - host: dev-api.pixalivefranchise.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: franchise-backend
            port:
              number: 5003
